# simple-string-cpp

./: CMakeLists.txt  GRADE.md  README.md  main.cpp  simpleString.cpp  simpleString.h
logs/: 3b_textResult.json
unit_tests/: simpleStringTests.cpp
